# continuous-refactoring

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  release-please-config.json
.continuous-refactoring/: taste.md
.github/workflows/: pr-title.yml  release.yml  test.yml
approaches/: agent-backend-boundary-split.md  agent-execution-domain-split.md  agent-inplace-seams.md  artifacts-boundary-hardening-inplace.md  artifacts-domain-split-lightweight.md  artifacts-error-typing-crossboundaries.md  init-init-export-contract.md  init-init-export-lazy-namespace.md  init-init-export-surface.md
docs/: release.md  taste-refine-upgrade-plan.md
docs/plans/: 001-visible-migration-dirs-and-consistency-foundation.md  002-planning-state-schema-and-durable-stage-outputs.md  003-atomic-planning-workspace-publisher.md  004-resumable-one-step-planning-engine.md  005-planning-before-phase-execution-scheduling.md  006-migration-list-and-doctor.md  007-migration-review-staged-publish.md  008-migration-refine.md  009-hardening-compatibility-and-docs.md  larger-refactorings-prompt.md  larger-refactorings.md
migrations/__intentional_skips__/: src-continuous-refactoring-agent-py-20260428T041549.md  src-continuous-refactoring-loop-py-20260422T051254.md
scripts/: run_larger_refactorings_plan.py
tests/: conftest.py  test_claude_stream_json.py  test_cli_init_taste.py  test_cli_migrations.py  test_cli_review.py  test_cli_taste_warning.py  test_cli_upgrade.py  test_cli_version.py  test_commit_messages.py  test_config.py  test_continuous_refactoring.py  test_decisions.py  test_e2e.py  test_effort.py  test_failure_report.py  test_focus_on_live_migrations.py  test_git.py  test_git_branching.py  test_loop_migration_tick.py  test_main_entrypoint.py  test_migration_consistency.py  test_migrations.py  test_no_driver_branching.py  test_phases.py  test_planning.py  test_planning_publish.py  test_planning_state.py  test_prompts.py  test_prompts_scope_selection.py  test_refactor_attempts.py  test_review_verdict.py  test_routing.py  test_run.py  test_run_once.py  test_run_once_regression.py  test_scope_candidates.py  test_scope_expansion.py  test_scope_loop_integration.py  test_scope_selection.py  test_targeting.py  (+4 more)
(+386 files in other folders)
