[project]
name = "continuous-refactoring"
version = "0.1.0"
description = "Continuous refactoring loop for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
continuous-refactoring = "continuous_refactoring:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/continuous_refactoring"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
